syntax = "proto3";

package pb;

option go_package = "github.com/Ditta1337/shop-app/server/proto";

message LogInUserInput {
  string email = 1;
  string password = 2;
}

message LogInUserResponse { 
  string Email = 1;
  string Token = 2;
}

