syntax = "proto3";

package pb;

import "user.proto";

message SignUpUserInput {
  string email = 1;
  string password = 2;
  string passwordConfirm = 3;
}

message SignUpUserResponse { User user = 1; }

